Bug 4184 - # 0 "" 2 doesn't handle assembler input buffer properly
Summary: # 0 "" 2 doesn't handle assembler input buffer properly
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.18
: P2 critical
Target Milestone: ---
Assignee: Alexandre Oliva
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-14 18:35 UTC by H.J. Lu
Modified: 2007-03-15 16:23 UTC (History)
2 users (show)

See Also:
Host:
Target: i686-pc-linux-gnu
Build:
Last reconfirmed:


Attachments
Assembly output (37.22 KB, application/octet-stream)
2007-03-14 18:37 UTC, H.J. Lu
Details
A testcase (554 bytes, application/octet-stream)
2007-03-14 20:25 UTC, H.J. Lu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2007-03-14 18:35:23 UTC
java/lang/.deps/natObject.lo failed with

./sysdep/locks.h: Assembler messages:
./sysdep/locks.h:52: Warning: unterminated string; newline inserted
...
Comment 1 H.J. Lu 2007-03-14 18:37:01 UTC
Created attachment 1616 [details]
Assembly output
Comment 2 H.J. Lu 2007-03-14 19:33:02 UTC
Revert this patch

http://sourceware.org/ml/binutils/2007-03/msg00083.html

fixed the problem.
Comment 3 H.J. Lu 2007-03-14 19:46:12 UTC
It may have something to do with the assembler input buffer size. I
think we ran into a similar problem before.
Comment 4 H.J. Lu 2007-03-14 19:52:59 UTC
(In reply to comment #3)
> It may have something to do with the assembler input buffer size. I
> think we ran into a similar problem before.

See

http://sourceware.org/ml/binutils/2003-06/msg00211.html
Comment 5 H.J. Lu 2007-03-14 20:25:51 UTC
Created attachment 1617 [details]
A testcase

[hjl@gnu-27 line]$ make src
cc     buffer.c   -o buffer
./buffer
[hjl@gnu-27 line]$ make
./as -32   -o buffer00.o buffer00.s
./as -32   -o buffer01.o buffer01.s
./as -32   -o buffer02.o buffer02.s
./as -32   -o buffer03.o buffer03.s
./as -32   -o buffer04.o buffer04.s
./as -32   -o buffer05.o buffer05.s
./as -32   -o buffer06.o buffer06.s
./as -32   -o buffer07.o buffer07.s
./as -32   -o buffer08.o buffer08.s
./as -32   -o buffer09.o buffer09.s
./as -32   -o buffer10.o buffer10.s
./as -32   -o buffer11.o buffer11.s
./as -32   -o buffer12.o buffer12.s
./as -32   -o buffer13.o buffer13.s
./as -32   -o buffer14.o buffer14.s
./as -32   -o buffer15.o buffer15.s
./as -32   -o buffer16.o buffer16.s
./as -32   -o buffer17.o buffer17.s
./as -32   -o buffer18.o buffer18.s
./as -32   -o buffer19.o buffer19.s
./as -32   -o buffer20.o buffer20.s
./as -32   -o buffer21.o buffer21.s
./as -32   -o buffer22.o buffer22.s
./as -32   -o buffer23.o buffer23.s
./as -32   -o buffer24.o buffer24.s
./as -32   -o buffer25.o buffer25.s
./as -32   -o buffer26.o buffer26.s
./as -32   -o buffer27.o buffer27.s
./as -32   -o buffer28.o buffer28.s
./as -32   -o buffer29.o buffer29.s
./as -32   -o buffer30.o buffer30.s
./as -32   -o buffer31.o buffer31.s
./as -32   -o buffer32.o buffer32.s
./as -32   -o buffer33.o buffer33.s
./as -32   -o buffer34.o buffer34.s
./as -32   -o buffer35.o buffer35.s
./as -32   -o buffer36.o buffer36.s
./as -32   -o buffer37.o buffer37.s
./as -32   -o buffer38.o buffer38.s
./as -32   -o buffer39.o buffer39.s
./as -32   -o buffer40.o buffer40.s
./as -32   -o buffer41.o buffer41.s
./as -32   -o buffer42.o buffer42.s
./as -32   -o buffer43.o buffer43.s
./as -32   -o buffer44.o buffer44.s
./as -32   -o buffer45.o buffer45.s
./as -32   -o buffer46.o buffer46.s
buffer46.s: Assembler messages:
buffer46.s:32754: Warning: end of file in string; '"' inserted
buffer46.s:32756: Error: junk at end of line, first unrecognized character is
`"'
make: *** [buffer46.o] Error 1
[hjl@gnu-27 line]$
Comment 6 Alexandre Oliva 2007-03-15 05:24:53 UTC
http://sourceware.org/ml/binutils/2007-03/msg00149.html
Comment 7 H.J. Lu 2007-03-15 16:23:59 UTC
(In reply to comment #6)
> http://sourceware.org/ml/binutils/2007-03/msg00149.html

Fixed.