2007-03-15  Alexandre Oliva  <aoliva@redhat.com>

PR gas/4184
	* app.c (do_scrub_chars): PUT after setting states.